--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
+    "node-stdlib-browser": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "wkx": "^0.5.0",
@@ -28,6 +30,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
