--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@google-cloud/text-to-speech": "^5.3.0",
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
