--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "eslintConfig": {
+  "extends": [
+    "plugin:cypress/recommended"
+  ]
+},
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@google-cloud/text-to-speech": "^5.3.0",
@@ -22,12 +27,15 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/cypress": "^1.1.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "cypress": "^13.12.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-cypress": "^3.3.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.2.2",
