--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "eslintConfig": {
-  "extends": [
-    "plugin:cypress/recommended"
-  ]
-},
+    "extends": [
+      "plugin:cypress/recommended"
+    ]
+  },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@google-cloud/text-to-speech": "^5.3.0",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/cypress": "^1.1.3",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
