--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@google-cloud/text-to-speech": "^5.3.0",
+    "@turf/distance": "^7.0.0",
+    "@turf/turf": "^7.0.0",
+    "@types/turf": "^3.5.32",
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
     "buffer": "^6.0.3",
     "node-stdlib-browser": "^1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "turf": "^3.0.14",
     "wkx": "^0.5.0",
     "zustand": "^4.5.4"
   },
