--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@google-cloud/text-to-speech": "^5.3.0",
     "@turf/distance": "^7.0.0",
+    "@turf/line-intersect": "^7.0.0",
+    "@turf/line-to-polygon": "^7.0.0",
+    "@turf/points-within-polygon": "^7.0.0",
+    "@turf/polygon-to-line": "^7.0.0",
     "@turf/turf": "^7.0.0",
     "@types/turf": "^3.5.32",
     "@vis.gl/react-google-maps": "^1.1.0",
